--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,45 @@
     --red: #bb2e31;
 }
 
+/* Generals */
+
+body {
+    background-color: black;
+    color: white;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+
 /* Utils */
 
+.flex {
+    display: flex;
+    flex-direction: row;
+}
 
-/* Generals */
+/* header */
+
+header {
+    height: 70px;
+}
+
+ul {
+    margin-top: 10px;
+    justify-content: flex-end;
+    list-style-type: none;
+
+}
+
+nav a {
+    background-color: #222222;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-right: 15px;
+}
+
+
+
