--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ ul {
 }
 
 nav a {
-    background-color: #222222;
+    background-color: var(--gray);
     padding: 5px 10px;
     border-radius: 5px;
     margin-right: 15px;
@@ -61,20 +61,33 @@ nav a {
 
 .container {
     margin: 0 auto;
-    width: 90vw;
+    width: 70vw;
     height: calc(100vh - 100px - 70px - 10px);
-    background-color: green;
     overflow-y: auto;
 }
 
-.row {
 
+
+.card-container {
+    display: inline-block;
+    margin: auto;
 }
 
 .card {
-    
+    position: relative;
+    display: inline-block;
+    margin-right: 7px;
+    margin-bottom: 15px;
 }
 
+.info {
+    background-color: var(--gray);
+    padding: 5px 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+}
 
 
 
